--- a/client-1/src/main/resources/application.properties
+++ b/client-1/src/main/resources/application.properties
@@ -2,3 +2,5 @@
 server.port=2000
 spring.application.name=demo-client
 eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
+
+debug=true
