--- a/server-eureka/pom.xml
+++ b/server-eureka/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>cc.corly.spring.boot</groupId>
-	<artifactId>demo</artifactId>
+	<artifactId>server-eureka</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>server</name>
+	<name>server-eureka</name>
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
