--- a/server-eureka/src/main/resources/application.properties
+++ b/server-eureka/src/main/resources/application.properties
@@ -6,3 +6,6 @@ eureka.client.serviceUrl.defaultZone=http://localhost:${server.port}/eureka/
 
 eureka.server.enable-self-preservation=false
 eureka.server.eviction-interval-timer-in-ms=4000
+
+
+debug=true
