--- a/service-ribbon/src/main/resources/application.properties
+++ b/service-ribbon/src/main/resources/application.properties
@@ -2,3 +2,5 @@
 server.port=2003
 spring.application.name=service-ribbon
 eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
+debug=true
+management.endpoints.web.exposure.include=hystrix.stream
